fix: configurar dockerContext para backend en Render
- Agregado dockerContext: backend en render.yaml
- Resuelve error 'prisma not found' en build de Docker
- El contexto ahora apunta correctamente al directorio backend/
- Relacionado con Misión #104: Armonización Deploy Prisma

--- a/render.yaml
+++ b/render.yaml
@@ -20,6 +20,7 @@ services:
     repo: https://github.com/kvn3toj/beforenostr
     branch: main
     dockerfilePath: ./backend/Dockerfile
+    dockerContext: backend
     healthCheckPath: /health
     envVars:
       - key: PORT
