refactor(deploy): set backend as rootDir for Render service
- Implements the  setting in render.yaml for the backend service.
- This is the idiomatic way to handle monorepos in Render, ensuring the Docker build context is correct.
- Resolves 'file not found' errors for  and  during Docker build.

--- a/render.yaml
+++ b/render.yaml
@@ -19,8 +19,8 @@ services:
     runtime: docker
     repo: https://github.com/kvn3toj/beforenostr
     branch: main
-    dockerfilePath: ./backend/Dockerfile
-    dockerContext: backend
+    rootDir: backend
+    dockerfilePath: Dockerfile
     healthCheckPath: /health
     envVars:
       - key: PORT
