feat(config): update backend URL across all services
- Updates backend URL to 'https://god-backend-j4b6.onrender.com'.
- Modifies render.yaml to update environment variables for the SuperApp service.
- Modifies vercel.json to update configuration for Vercel deployments.
- Updates documentation to reflect the new production URL.

--- a/Demo/apps/superapp-unified/vercel.json
+++ b/Demo/apps/superapp-unified/vercel.json
@@ -6,9 +6,9 @@
     "NODE_ENV": "production",
     "NODE_OPTIONS": "--max-old-space-size=4096",
     "VITE_APP_ENV": "production",
-    "VITE_BASE_URL": "https://superapp-unified.vercel.app",
-    "VITE_API_BASE_URL": "https://coomunity-backend.onrender.com",
-    "VITE_NETWORK_API_URL": "https://coomunity-backend.onrender.com",
+    "VITE_BASE_URL": "https://coomunity.com",
+    "VITE_API_BASE_URL": "https://god-backend-j4b6.onrender.com",
+    "VITE_NETWORK_API_URL": "https://god-backend-j4b6.onrender.com",
     "VITE_ENABLE_MOCK_AUTH": "false",
     "VITE_ENABLE_MOCK_DATA": "false",
     "VITE_MOCK_MODE": "false",
