--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,6 +1,5 @@
 # 🚀 CoomÜnity Monorepo - CI/CD Pipeline Optimizado
 # Pipeline basado en las mejores prácticas de Turborepo 2024
-
 name: CoomÜnity CI/CD Pipeline
 
 on:
@@ -10,318 +9,140 @@ on:
     branches: [main]
 
 jobs:
-  setup-dependencies:
-    name: '📦 Setup Dependencies'
+  ci:
+    name: 🚀 CI - Build, Lint & Test
     runs-on: ubuntu-latest
-    outputs:
-      cache-hit: ${{ steps.cache-nodemodules.outputs.cache-hit }}
     steps:
-      - name: '🔍 Checkout Repository'
+      - name: 🔍 Checkout Repository
         uses: actions/checkout@v4
 
-      - name: '🔧 Setup Node.js'
+      - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
           cache: 'npm'
 
-      - name: '📥 Restore node_modules Cache'
-        id: cache-nodemodules
-        uses: actions/cache@v4
-        with:
-          path: |
-            node_modules
-            ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+      - name: 📥 Install Dependencies
+        run: npm ci --legacy-peer-deps
 
-      - name: '📦 Install Dependencies'
-        if: steps.cache-nodemodules.outputs.cache-hit != 'true'
-        run: |
-          npm ci --prefer-offline --no-audit
-          echo "✅ Dependencies installed successfully"
+      - name: 🧹 Run Linter
+        run: turbo run lint
 
-      - name: '🔍 Verify Installation'
-        run: |
-          echo "📊 Dependency verification:"
-          npm list --depth=0 || echo "⚠️  Some peer dependencies missing (normal)"
-          echo "✅ Setup completed"
+      - name: 🏗️ Build Applications
+        run: turbo run build
 
-  code-quality:
-    name: '🔍 Code Quality'
-    runs-on: ubuntu-latest
-    needs: setup-dependencies
-    steps:
-      - name: '🔍 Checkout Repository'
-        uses: actions/checkout@v4
+      - name: 🧪 Run Unit & Integration Tests
+        run: turbo run test
 
-      - name: '🔧 Setup Node.js'
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: '📥 Restore node_modules Cache'
-        uses: actions/cache@v4
-        with:
-          path: |
-            node_modules
-            ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: '🧹 Run Linter'
-        run: |
-          if [ -f "node_modules/.bin/eslint" ]; then
-            npm run lint || echo "⚠️  Linting completed with warnings"
-          else
-            echo "⚠️  ESLint not found, skipping linting"
-          fi
-
-      - name: '🎨 Check Code Formatting'
-        run: |
-          if [ -f "node_modules/.bin/prettier" ]; then
-            npm run format:check || echo "⚠️  Formatting check completed"
-          else
-            echo "⚠️  Prettier not found, skipping formatting check"
-          fi
-
-  build-test:
-    name: '🏗️ Build & Test'
-    runs-on: ubuntu-latest
-    needs: setup-dependencies
-    steps:
-      - name: '🔍 Checkout Repository'
-        uses: actions/checkout@v4
-
-      - name: '🔧 Setup Node.js'
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: '📥 Restore node_modules Cache'
-        uses: actions/cache@v4
-        with:
-          path: |
-            node_modules
-            ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: '🏗️ Build Application'
-        run: |
-          if npm run build; then
-            echo "✅ Build completed successfully"
-            ls -la dist/ || ls -la build/ || echo "📁 Build output in different location"
-          else
-            echo "❌ Build failed"
-            exit 1
-          fi
-
-      - name: '🧪 Run Unit Tests'
-        run: |
-          if npm run test:unit 2>/dev/null || npm run test 2>/dev/null; then
-            echo "✅ Unit tests passed"
-          else
-            echo "⚠️  Unit tests not configured or failed"
-          fi
-
-      - name: '📊 Upload Build Artifacts'
+      - name: 📊 Upload Build Artifacts
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: build-artifacts
           path: |
-            dist/
-            build/
-            .next/
+            apps/admin-frontend/dist
+            backend/dist
+            Demo/apps/superapp-unified/dist
           retention-days: 7
 
-  integration-test:
-    name: '🔗 Integration Test'
-    runs-on: ubuntu-latest
-    needs: [setup-dependencies, build-test]
-    steps:
-      - name: '🔍 Checkout Repository'
-        uses: actions/checkout@v4
-
-      - name: '🔧 Setup Node.js'
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: '📥 Restore node_modules Cache'
-        uses: actions/cache@v4
-        with:
-          path: |
-            node_modules
-            ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: '🔗 Run Integration Tests'
-        run: |
-          if npm run test:integration 2>/dev/null; then
-            echo "✅ Integration tests passed"
-          else
-            echo "⚠️  Integration tests not configured or failed"
-          fi
-
   e2e-testing:
-    name: '🧪 E2E Testing'
+    name: 🧪 E2E Testing
     runs-on: ubuntu-latest
-    needs: [setup-dependencies, build-test]
+    needs: ci
     steps:
-      - name: '🔍 Checkout Repository'
+      - name: 🔍 Checkout Repository
         uses: actions/checkout@v4
 
-      - name: '🔧 Setup Node.js'
+      - name: 🔧 Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+          cache: 'npm'
 
-      - name: '📥 Restore node_modules Cache'
-        uses: actions/cache@v4
+      - name: 📥 Install Dependencies
+        run: npm ci --legacy-peer-deps
+
+      - name: 📥 Download Build Artifacts
+        uses: actions/download-artifact@v4
         with:
-          path: |
-            node_modules
-            ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
+          name: build-artifacts
+          path: .
 
-      - name: '🎭 Install Playwright Browsers'
+      - name: 🎭 Install Playwright Browsers
+        run: npx playwright install --with-deps
+
+      - name: 🚀 Start Applications for E2E
         run: |
-          if [ -f "node_modules/.bin/playwright" ]; then
-            npx playwright install --with-deps
-            echo "✅ Playwright browsers installed"
-          else
-            echo "⚠️  Playwright not found, skipping browser installation"
-          fi
+          npm run dev &
+          echo "Waiting for services to start..."
+          sleep 30 # Wait for services to be up
+        env:
+          CI: true
 
-      - name: '🚀 Start Application'
-        run: |
-          if npm run dev > /dev/null 2>&1 & then
-            echo "✅ Application started in background"
-            sleep 10
-            APP_PID=$!
-            echo "APP_PID=$APP_PID" >> $GITHUB_ENV
-          else
-            echo "⚠️  Could not start application"
-          fi
+      - name: 🧪 Run E2E Tests
+        run: npm run test:e2e:ci
 
-      - name: '🧪 Run E2E Tests'
-        run: |
-          if [ -f "node_modules/.bin/playwright" ]; then
-            npm run test:e2e || echo "⚠️  E2E tests failed or not configured"
-          else
-            echo "⚠️  Playwright not found, skipping E2E tests"
-          fi
-
-      - name: '🛑 Stop Application'
-        if: always()
-        run: |
-          if [ ! -z "$APP_PID" ]; then
-            kill $APP_PID 2>/dev/null || echo "App already stopped"
-          fi
-
-      - name: '📊 Upload Playwright Report'
+      - name: 📊 Upload Playwright Report
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: playwright-report
           path: |
-            Demo/apps/superapp-unified/playwright-report/
-            Demo/apps/superapp-unified/test-results/
             playwright-report/
             test-results/
+            Demo/apps/superapp-unified/playwright-report/
+            Demo/apps/superapp-unified/test-results/
           retention-days: 30
 
-  security-scan:
-    name: '🔒 Security Scan'
-    runs-on: ubuntu-latest
-    needs: setup-dependencies
-    steps:
-      - name: '🔍 Checkout Repository'
-        uses: actions/checkout@v4
-
-      - name: '🔧 Setup Node.js'
-        uses: actions/setup-node@v4
-        with:
-          node-version: '18'
-
-      - name: '📥 Restore node_modules Cache'
-        uses: actions/cache@v4
-        with:
-          path: |
-            node_modules
-            ~/.npm
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
-      - name: '🔍 Run Security Audit'
-        run: |
-          echo "🔍 Running security audit..."
-          npm audit --audit-level=moderate || echo "⚠️  Security audit completed with warnings"
-
-      - name: '🔒 Check for Vulnerabilities'
-        run: |
-          echo "🔒 Vulnerabilitéies check completed"
-
   deploy-staging:
-    name: '🚀 Deploy to Staging'
+    name: 🚀 Deploy to Staging
     runs-on: ubuntu-latest
-    needs: [code-quality, build-test, integration-test, security-scan]
+    needs: [ci, e2e-testing]
     if: github.ref == 'refs/heads/develop'
     environment: staging
     steps:
-      - name: '🔍 Checkout Repository'
+      - name: 🔍 Checkout Repository
         uses: actions/checkout@v4
 
-      - name: '📥 Download Build Artifacts'
+      - name: 📥 Download Build Artifacts
         uses: actions/download-artifact@v4
         with:
           name: build-artifacts
-          path: ./build
 
-      - name: '🚀 Deploy to Staging'
+      - name: 🚀 Deploy to Staging
         run: |
           echo "🚀 Deploying to staging environment..."
+          # Add your staging deployment script here
           echo "✅ Staging deployment completed"
 
   deploy-production:
-    name: '🚀 Deploy to Production'
+    name: 🚀 Deploy to Production
     runs-on: ubuntu-latest
-    needs:
-      [code-quality, build-test, integration-test, e2e-testing, security-scan]
+    needs: [ci, e2e-testing]
     if: github.ref == 'refs/heads/main'
     environment: production
     steps:
-      - name: '🔍 Checkout Repository'
+      - name: 🔍 Checkout Repository
         uses: actions/checkout@v4
 
-      - name: '📥 Download Build Artifacts'
+      - name: 📥 Download Build Artifacts
         uses: actions/download-artifact@v4
         with:
           name: build-artifacts
-          path: ./build
 
-      - name: '🚀 Deploy to Production'
+      - name: 🚀 Deploy to Production
         run: |
           echo "🚀 Deploying to production environment..."
+          # Add your production deployment script here
           echo "✅ Production deployment completed"
 
   notification:
-    name: '📢 Notification'
+    name: 📢 Notification
     runs-on: ubuntu-latest
     needs: [deploy-staging, deploy-production]
     if: always()
     steps:
-      - name: '📢 Send Notification'
+      - name: 📢 Send Notification
         run: |
           if [ "${{ needs.deploy-production.result }}" == "success" ]; then
             echo "✅ Production deployment successful!"
