--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,13 +26,13 @@ jobs:
         run: npm ci --legacy-peer-deps
 
       - name: 🧹 Run Linter
-        run: turbo run lint
+        run: npm run lint
 
       - name: 🏗️ Build Applications
-        run: turbo run build
+        run: npm run build
 
       - name: 🧪 Run Unit & Integration Tests
-        run: turbo run test
+        run: npm run test
 
       - name: 📊 Upload Build Artifacts
         uses: actions/upload-artifact@v4
