test: prueba de BugBot con cambios pendientes

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "author": "CoomÜnity Team",
   "private": true,
   "license": "MIT",
+  "type": "module",
   "main": "dist/main.js",
   "scripts": {
     "dev": "npm run start:dev",
@@ -16,6 +17,7 @@
     "start:prod": "node dist/main.js",
     "deploy": "npx prisma migrate deploy && npx prisma db seed",
     "lint": "eslint . --fix",
+    "lint:check": "eslint . --max-warnings 0",
     "test": "jest",
     "test:transactions": "jest --testPathPattern=merits-and-wallet/transactions/transactions.spec.ts --forceExit",
     "test:watch": "jest --watch",
