--- a/.env
+++ b/.env
@@ -60,3 +60,11 @@ BCRYPT_SALT_ROUNDS=10
 # 🎯 PUERTO DEL BACKEND (CRÍTICO)
 # No definir PORT aquí - main.ts usa 3002 por defecto
 
+
+# === BACKEND/PRISMA VARS (consolidated July 2025) ===
+PORT=3002
+NODE_ENV=development
+DATABASE_URL="postgresql://kevinp:JSgrjv96urOpJkMyvHqZWm14dgHEMUAH@localhost:5432/gamifier_local?schema=public"
+JWT_SECRET="cop-2025-july03"
+REDIS_URL="redis://localhost:6379"
+
