--- a/Demo/apps/superapp-unified/package.json
+++ b/Demo/apps/superapp-unified/package.json
@@ -76,87 +76,8 @@
     "build:e2e:ci": "cross-env NODE_ENV=test npm run build:e2e",
     "deploy:prod": "npm run build:prod && vercel --prod"
   },
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@hookform/resolvers": "^3.10.0",
-    "@mui/icons-material": "^7.0.1",
-    "@mui/lab": "^7.0.0-beta.4",
-    "@mui/material": "^5.17.1",
-    "@mui/system": "^7.0.0",
-    "@sentry/browser": "^8.55.0",
-    "@sentry/react": "^8.55.0",
-    "@sentry/vite-plugin": "^3.5.0",
-    "@supabase/auth-helpers-react": "^0.5.0",
-    "@supabase/auth-ui-react": "^0.4.7",
-    "@supabase/supabase-js": "^2.50.0",
-    "@tanstack/react-query": "^5.76.0",
-    "@tanstack/react-query-devtools": "^5.80.7",
-    "@testing-library/react": "^14.3.1",
-    "@testing-library/user-event": "^14.6.1",
-    "@types/dompurify": "^3.0.5",
-    "@types/react-lazy-load-image-component": "^1.6.4",
-    "@vitejs/plugin-react": "^4.5.2",
-    "@vitest/mocker": "^3.2.4",
-    "autoprefixer": "^10.4.21",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "dompurify": "^3.2.6",
-    "framer-motion": "^12.17.0",
-    "immer": "^10.1.1",
-    "lodash.debounce": "^4.0.8",
-    "lucide-react": "^0.344.0",
-    "mathjs": "^14.5.2",
-    "postcss": "^8.4.48",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-error-boundary": "^6.0.0",
-    "react-hook-form": "^7.58.1",
-    "react-lazy-load-image-component": "^1.6.3",
-    "react-markdown": "^10.1.0",
-    "react-player": "^2.16.0",
-    "react-router-dom": "^7.6.3",
-    "react-youtube": "^10.1.0",
-    "recharts": "^2.15.3",
-    "rollup-plugin-visualizer": "^5.12.0",
-    "serve": "^14.2.3",
-    "socket.io-client": "^4.8.1",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^2.6.0",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.5.3",
-    "use-sync-external-store": "^1.5.0",
-    "vite": "^6.3.5",
-    "vite-plugin-node-polyfills": "^0.22.0",
-    "vite-plugin-pwa": "^1.0.0",
-    "vite-tsconfig-paths": "^5.1.4",
-    "web-vitals": "^4.2.4",
-    "zod": "^3.25.67",
-    "zustand": "^4.5.7"
-  },
-  "devDependencies": {
-    "@builder.io/dev-tools": "^1.6.108",
-    "@eslint/js": "^9.28.0",
-    "@playwright/test": "^1.53.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@types/lodash.debounce": "^4.0.9",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
-    "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^7.14.1",
-    "@typescript-eslint/parser": "^7.14.1",
-    "@vitest/pretty-format": "^2.1.9",
-    "es-module-lexer": "^1.7.0",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7",
-    "expect-type": "^1.2.1",
-    "glob": "^7.2.3",
-    "globals": "^16.2.0",
-    "tailwindcss-animate": "^1.0.7",
-    "tinyrainbow": "^1.2.0",
-    "workbox-window": "^7.3.0"
-  },
+  "dependencies": {},
+  "devDependencies": {},
   "peerDependencies": {
     "react": "18.3.1",
     "react-dom": "18.3.1"
