--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "start:backend:dev": "cd backend && npm run start:dev",
     "start:backend:prod": "npm run clean:backend && npm run build:backend && node dist/main.js",
     "start:backend:compiled": "npm run build:backend && cp -r backend/src/generated dist/ && node dist/main.js",
-    "build:backend": "tsc -p config/json/tsconfig.backend.json",
+    "build:backend": "tsc -p tsconfig.backend.json",
     "mock-cleanup-agent": "node scripts/mock-cleanup-background-agent.js",
     "mock-cleanup-dispatch": "node scripts/slack-mock-cleanup-dispatcher.js",
     "dm": "./scripts/dev-manager.sh",
@@ -77,7 +77,9 @@
     "@hookform/resolvers": "^3.3.4",
     "@modelcontextprotocol/sdk": "^1.13.2",
     "@mui/icons-material": "^7.0.1",
+    "@mui/lab": "^7.0.0-beta.4",
     "@mui/material": "^7.0.1",
+    "@mui/system": "^7.0.0",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.1.1",
     "@nestjs/core": "^11.1.1",
@@ -90,8 +92,8 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/websockets": "^11.1.3",
     "@slack/webhook": "^7.0.5",
-    "@tanstack/react-query": "^5.71.10",
-    "@tanstack/react-query-devtools": "^5.71.10",
+    "@tanstack/react-query": "^5.76.0",
+    "@tanstack/react-query-devtools": "^5.80.7",
     "bcryptjs": "^3.0.2",
     "cache-manager": "^7.0.0",
     "class-transformer": "^0.5.1",
@@ -100,7 +102,10 @@
     "dexie": "^3.2.4",
     "dompurify": "^3.2.6",
     "dotenv": "^16.5.0",
+    "eslint": "^8.35.0",
     "express": "^5.1.0",
+    "globals": "^15.15.0",
+    "happy-dom": "^17.4.7",
     "i18next": "^23.10.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
@@ -109,6 +114,7 @@
     "nostr-tools": "^2.13.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "prettier": "^3.4.2",
     "prom-client": "^15.1.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -122,8 +128,11 @@
     "rxjs": "^7.8.2",
     "socket.io": "^4.8.1",
     "sonner": "^2.0.3",
+    "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
+    "typescript": "~5.7.2",
     "use-debounce": "^10.0.5",
+    "vite": "^6.2.0",
     "winston": "^3.17.0",
     "zod": "^3.22.4",
     "zustand": "^5.0.3"
@@ -131,7 +140,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@nestjs/testing": "^11.1.1",
-    "@playwright/test": "^1.42.1",
+    "@playwright/test": "^1.52.0",
     "@prisma/client": "^5.22.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
@@ -146,24 +155,16 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/pretty-format": "^2.1.9",
     "es-module-lexer": "^1.7.0",
-    "eslint": "^8.35.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "happy-dom": "^17.4.7",
-    "prettier": "^3.4.2",
-    "prisma": "^5.22.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "tsx": "^4.19.4",
+    "rollup-plugin-visualizer": "^6.0.3",
     "turbo": "^2.5.4",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0",
     "vite-plugin-node-polyfills": "^0.23.0",
-    "vite-plugin-pwa": "^1.0.0"
+    "vite-plugin-pwa": "^1.0.0",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^1.0.0"
   },
   "peerDependencies": {
     "react": "18.3.1",
