--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,9 +5,7 @@
   },
   "files": [],
   "references": [
-    { "path": "./tsconfig.backend.json" },
-    { "path": "./Demo/apps/superapp-unified" },
-    { "path": "./packages/shared-types" },
-    { "path": "./packages/sync-engine" }
+    { "path": "./tsconfig.app.json" },
+    { "path": "./tsconfig.node.json" }
   ]
 }
