--- a/tools/modular-review-dashboard/package.json
+++ b/tools/modular-review-dashboard/package.json
@@ -18,29 +18,26 @@
     "setup:review": "cd ../../ && bash scripts/utilities/setup-modular-review.sh"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "@mui/material": "^5.15.15",
-    "@mui/icons-material": "^5.15.15",
-    "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "recharts": "^2.12.2",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "axios": "^1.6.8",
     "date-fns": "^3.6.0",
-    "lodash": "^4.17.21",
-    "react-query": "^3.39.3",
-    "react-hot-toast": "^2.4.1",
     "framer-motion": "^11.0.24",
+    "fuse.js": "^7.0.0",
+    "lodash": "^4.17.21",
     "react-dropzone": "^14.2.3",
+    "react-hot-toast": "^2.4.1",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.22.3",
     "react-syntax-highlighter": "^15.5.0",
     "react-virtualized": "^9.22.5",
-    "fuse.js": "^7.0.0",
-    "axios": "^1.6.8"
+    "recharts": "^2.12.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@types/lodash": "^4.17.0",
     "@types/react-syntax-highlighter": "^15.5.11",
     "@types/react-virtualized": "^9.21.29",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
