fix(render): update render configuration for backend and superapp
- Changed the repository URL for the backend service to the Coomunity repository.
- Updated the Docker context and health check configuration for the backend service.
- Adjusted environment variable values in the superapp service to use single quotes for consistency.
- Refined the Dockerfile for the backend to streamline the build process and ensure proper copying of necessary files.
- Enhanced the production command to include workspace-specific commands for better deployment management.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,65 +8,38 @@
 # ================================================================
 FROM node:lts-alpine AS builder
 
-# El contexto de build será **la raíz del monorepo** y no backend/
-# Por eso, /app contendrá exclusivamente el código del backend
-WORKDIR /app
+WORKDIR /usr/src/app
 
-# Dependencias del sistema para Prisma
-RUN apk add --no-cache openssl
+# Copia los archivos de definición de paquetes de la raíz y del backend
+COPY package.json package-lock.json* ./
+COPY backend/package.json ./backend/
 
-# ------------------------------------------------
-# Paso 1 – Copiar package-lock.json raíz (monorepo)
-# ------------------------------------------------
-COPY package-lock.json ./
-
-# ------------------------------------------------
-# Paso 2 – Copiar el package.json del backend como principal
-# (se renombra para que npm ci lo detecte)
-# ------------------------------------------------
-COPY backend/package.json ./package.json
-
-# ------------------------------------------------
-# Paso 3 – Copiar prisma y resto de fuentes del backend
-# ------------------------------------------------
-COPY backend/prisma ./prisma
-
-# Instalación SOLO de dependencias requeridas por el backend
+# Instala dependencias del monorepo
 RUN npm ci --legacy-peer-deps
 
-# Copiar el resto del código fuente del backend
-COPY backend/. ./
+# Copia el código fuente del backend y el schema de Prisma
+COPY backend/. ./backend/
+COPY prisma/. ./prisma/
 
-# Generar Prisma Client
-RUN npx prisma generate --schema=./prisma/schema.prisma
+# Genera el cliente de Prisma
+RUN cd backend && npx prisma generate --schema=../prisma/schema.prisma
 
-# Compilar la app (NestJS)
-RUN npm run build
+# Build del backend
+RUN npm run build --workspace=backend
 
 # ================================================================
 # Etapa 2: Producción
 # ================================================================
-FROM node:lts-alpine AS production
+FROM node:lts-alpine
 
-WORKDIR /app
+WORKDIR /usr/src/app
 
-# Instala openssl para Prisma
-RUN apk add --no-cache openssl
+COPY --from=builder /usr/src/app/node_modules ./node_modules
+COPY package.json ./
+COPY --from=builder /usr/src/app/backend/dist ./dist
+COPY --from=builder /usr/src/app/backend/node_modules/.prisma ./node_modules/.prisma
+COPY prisma ./prisma
 
-# Copia solo lo necesario desde la etapa de build
-COPY --from=builder /app/package.json ./
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/prisma ./prisma
-COPY --from=builder /app/src/generated/prisma ./src/generated/prisma
-COPY --from=builder /app/node_modules/.prisma ./node_modules/.prisma
-
-# Variables de entorno
-ENV NODE_ENV=production
-ENV PORT=3002
-
-# Expone el puerto
 EXPOSE 3002
 
-# Comando optimizado de inicio
-CMD ["sh", "-c", "npx prisma migrate deploy && npm run db:seed && node dist/main.js"]
+CMD ["sh", "-c", "npx prisma migrate deploy && npm run db:seed --workspace=backend && node dist/main.js"]
