refactor(render): update backend service configuration and Dockerfile
- Renamed the backend service from 'god-backend' to 'beforenostr-backend' in the render configuration.
- Adjusted the Docker context path to point directly to the backend directory.
- Streamlined the Dockerfile by copying only necessary dependency files and simplifying the build process.
- Updated the production command to ensure proper schema usage for Prisma migrations.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,22 +10,20 @@ FROM node:lts-alpine AS builder
 
 WORKDIR /usr/src/app
 
-# Copia los archivos de definición de paquetes de la raíz y del backend
+# Copia solo los archivos de dependencias
 COPY package.json package-lock.json* ./
-COPY backend/package.json ./backend/
 
-# Instala dependencias del monorepo
+# Instala dependencias
 RUN npm ci --legacy-peer-deps
 
-# Copia el código fuente del backend y el schema de Prisma
-COPY backend/. ./backend/
-COPY prisma/. ./prisma/
+# Copia el resto del código fuente del backend
+COPY . .
 
-# Genera el cliente de Prisma
-RUN cd backend && npx prisma generate --schema=../prisma/schema.prisma
+# Genera Prisma Client
+RUN npx prisma generate --schema=./prisma/schema.prisma
 
-# Build del backend
-RUN npm run build --workspace=backend
+# Compila la app
+RUN npm run build
 
 # ================================================================
 # Etapa 2: Producción
@@ -35,11 +33,11 @@ FROM node:lts-alpine
 WORKDIR /usr/src/app
 
 COPY --from=builder /usr/src/app/node_modules ./node_modules
-COPY package.json ./
-COPY --from=builder /usr/src/app/backend/dist ./dist
-COPY --from=builder /usr/src/app/backend/node_modules/.prisma ./node_modules/.prisma
-COPY prisma ./prisma
+COPY --from=builder /usr/src/app/package.json ./
+COPY --from=builder /usr/src/app/dist ./dist
+COPY --from=builder /usr/src/app/prisma ./prisma
+COPY --from=builder /usr/src/app/node_modules/.prisma ./node_modules/.prisma
 
 EXPOSE 3002
 
-CMD ["sh", "-c", "npx prisma migrate deploy && npm run db:seed --workspace=backend && node dist/main.js"]
+CMD ["sh", "-c", "npx prisma migrate deploy --schema=./prisma/schema.prisma && npm run db:seed && node dist/main.js"]
